--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ requests-oauthlib = "^1.3.1"
 pyjwt = "^2.8.0"
 paramiko = "^3.3.1"
 scp = "^0.14.5"
+tabulate = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core"]
